HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/FoundationalClassNameReserved/Source/Main.uv
//! Rejected foundational-class specimen for redeclaring a built-in foundational name.

public class Bitcopy {
}
